# shelterpaws

./: .gitignore  .stylelintignore  .stylelintrc.json  CNAME  README.md  _config.yml  docker-compose.yml  finance.md  how-to.md  index.html  index.md  list1.md  package.json  process.md  sponsors.md  stack.md  team.md  thumbnail.sh
backend/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.db.yml  docker-compose.yml  main.py  pyproject.toml  test_db.db
backend/dao/: animal_dao.py  animal_photo_dao.py  base_dao.py  shelter_dao.py
backend/database/: __init__.py  acessor.py  alembic.ini  env.py  manage.py  metadata.py
backend/database/versions/: 3e3431180c42_add_additional_fields_to_models.py  619cced1d961_add_fk_file.py  7cc30087c9d7_.py  fdae3120f6f8_added_shelter_table.py
backend/dto/: animal_dto.py  base_dto.py
backend/handlers/: __init__.py  animal.py
backend/models/: __init__.py  animal.py  animal_photo.py  photo.py  shelter.py
backend/routers/: __init__.py  animal_photo_router.py  animal_router.py  shelter_router.py
backend/schemas/: animal_photo_schemas.py  animal_schemas.py  base_schema.py  shelter_schemas.py
backend/services/: animal_photo_service.py  animal_service.py  animal_template_service.py  base_template_service.py  shelter_service.py
backend/settings/: .gitignore  __init__.py  base_settings.py  cors.py  local.py  prod.py
backend/static/: normalize.css  styles.css
backend/templates/components/: gallery_item.html
backend/utils/: __init__.py  bind_exceptions.py  bind_routes.py  bind_static.py  prepare_cors.py
(+103 files in other folders)
