[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["alexeyryjkov <a.ryzhkov@ivpa.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["stadard"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
typer = "^0.9.0"
pydantic-settings = "^2.1.0"
aiosqlite = "^0.19.0"
greenlet = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
